--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -4,7 +4,7 @@
       <div class="hero_section_content">
         <div class="hero_section_titles">
           <h1 id="hero_title">Scale your community</h1>
-          <p class="g3" id="hero_subtitle">Share the best suppliers for your community, empower local and chosen business, customize a unique member card.</p>
+          <p class="g3" id="hero_subtitle">Share the best suppliers for your community, empower local business and customize a unique member card for your community.</p>
         </div>
   
         <div class="hero_cta_buttons">
