--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -25,11 +25,12 @@
 
     #hero_title{
         font-size: 55px;
+        font-weight: 600;
     }
 
     #hero_subtitle{
         margin-top: 8px;
-        max-width: 530px;
+        max-width: 500px;
     }
 
     .hero_cta_buttons{
